[gd_scene load_steps=17 format=2]

[ext_resource path="res://game/cards/GoddessHand/GoddessHand.gd" type="Script" id=1]
[ext_resource path="res://assets/swoosh/whiteCard25.png" type="Texture" id=2]
[ext_resource path="res://assets/swoosh/whiteCard50.png" type="Texture" id=3]
[ext_resource path="res://assets/swoosh/whiteCard75.png" type="Texture" id=4]
[ext_resource path="res://assets/swoosh/whiteCard.png" type="Texture" id=5]
[ext_resource path="res://assets/swoosh/D1.png" type="Texture" id=6]
[ext_resource path="res://assets/swoosh/D2.png" type="Texture" id=7]
[ext_resource path="res://assets/swoosh/D3.png" type="Texture" id=8]
[ext_resource path="res://assets/swoosh/D4.png" type="Texture" id=9]
[ext_resource path="res://assets/swoosh/G1.png" type="Texture" id=10]
[ext_resource path="res://assets/swoosh/G2.png" type="Texture" id=11]
[ext_resource path="res://assets/swoosh/G3.png" type="Texture" id=12]
[ext_resource path="res://assets/swoosh/G4.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "swoosh",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "swoosh",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "swoosh",
"speed": 15.0
} ]

[node name="GoddessHand" type="Node2D"]

position = Vector2( 16, 24 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="WCard" type="AnimatedSprite" parent="." index="0"]

visible = false
frames = SubResource( 1 )
animation = "swoosh"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="SwooshG" type="AnimatedSprite" parent="." index="1"]

visible = false
position = Vector2( -12, 0 )
frames = SubResource( 2 )
animation = "swoosh"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="SwooshD" type="AnimatedSprite" parent="." index="2"]

visible = false
position = Vector2( 12, 0 )
frames = SubResource( 3 )
animation = "swoosh"
_sections_unfolded = [ "Transform", "Visibility" ]

[connection signal="animation_finished" from="WCard" to="." method="_on_WCard_animation_finished"]


